use concat instead of append

--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,14 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training with: impurity_func: entropy, max_depth: 5, min_instances: 2, target_impurity: 0\n"
+      "Training with: impurity_func: entropy, max_depth: 5, min_instances: 2, target_impurity: 0\n",
+      "Result: Validation accuray: 0.755 || Test accuray: 0.739 \n",
+      "\n"
      ]
     }
    ],
@@ -137,7 +139,7 @@
     "            test = test,\n",
     "            impurity_func = 'entropy',\n",
     "            discrete_threshold = 10,\n",
-    "            max_depth = 5,\n",
+    "            max_depth = 8,\n",
     "            min_instances = 2,\n",
     "            target_impurity = 0)\n",
     "print('Result: Validation accuray: {} || Test accuray: {} \\n'.format(validation_accuracy,test_accuracy))\n"
@@ -153,21 +155,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>impurity_func</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>min_instances</th>\n",
+       "      <th>target_impurity</th>\n",
+       "      <th>validation_accuracy</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.755</td>\n",
+       "      <td>0.739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.755</td>\n",
+       "      <td>0.739</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  impurity_func max_depth min_instances target_impurity  validation_accuracy  \\\n",
+       "0             1         1             1               1                0.755   \n",
+       "1             1         2             1               1                0.755   \n",
+       "\n",
+       "   test_accuracy  \n",
+       "0          0.739  \n",
+       "1          0.739  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
+    "# records = pd.DataFrame(columns= ['impurity_func', 'max_depth', 'min_instances', 'target_impurity','validation_accuracy','test_accuracy'])\n",
     "# row = {'impurity_func': 1, 'max_depth': 1, 'min_instances': 1, 'target_impurity': 1,'validation_accuracy': validation_accuracy,'test_accuracy': test_accuracy}\n",
-    "# row2 = {'impurity_func': 1, 'max_depth': 1, 'min_instances': 1, 'target_impurity': 1,'validation_accuracy': validation_accuracy,'test_accuracy': test_accuracy}\n",
-    "# records = records.append(row,ignore_index=True)\n",
-    "# records = records.append(row2,ignore_index=True)\n",
+    "# row2 = {'impurity_func': 1, 'max_depth': 2, 'min_instances': 1, 'target_impurity': 1,'validation_accuracy': validation_accuracy,'test_accuracy': test_accuracy}\n",
+    "# records = pd.concat([records,pd.DataFrame(row,index=[0])])\n",
+    "# records = pd.concat([records,pd.DataFrame(row2,index=[len(records)])])\n",
     "# records"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +245,8 @@
     "impurity_funcs = ['entorpy','gini']\n",
     "def para_tuning():\n",
     "    records = pd.DataFrame(columns= ['impurity_func', 'max_depth', 'min_instances', 'target_impurity','validation_accuracy','test_accuracy'])\n",
-    "    for max_depth in range(10,25):\n",
-    "        for min_instances in range(2, 8):\n",
+    "    for max_depth in range(7,14):\n",
+    "        for min_instances in range(2,20):\n",
     "            for target_impurity in np.arange(0,1,0.2):\n",
     "                for impurity_func in impurity_funcs:\n",
     "                    try:\n",
@@ -190,7 +259,7 @@
     "                                    min_instances = min_instances,\n",
     "                                    target_impurity = target_impurity)\n",
     "                        row = {'impurity_func': impurity_func, 'max_depth': max_depth, 'min_instances': min_instances, 'target_impurity': target_impurity,'validation_accuracy': validation_accuracy,'test_accuracy': test_accuracy}\n",
-    "                        records = records.append(row,ignore_index=True)\n",
+    "                        records = pd.concat([records,pd.DataFrame(row,index=[len(records)])])\n",
     "                    except:\n",
     "                        print('Failed with: impurity_func: {}, max_depth: {}, min_instances: {}, target_impurity: {}'.format(impurity_func,max_depth,min_instances,target_impurity))\n",
     "    return records"
@@ -198,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
