--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -245,9 +245,9 @@
     "impurity_funcs = ['entorpy','gini']\n",
     "def para_tuning():\n",
     "    records = pd.DataFrame(columns= ['impurity_func', 'max_depth', 'min_instances', 'target_impurity','validation_accuracy','test_accuracy'])\n",
-    "    for max_depth in range(7,14):\n",
-    "        for min_instances in range(2,20):\n",
-    "            for target_impurity in np.arange(0,1,0.2):\n",
+    "    for max_depth in range(7,10):\n",
+    "        for min_instances in range(2,5):\n",
+    "            for target_impurity in np.arange(0,1,0.3):\n",
     "                for impurity_func in impurity_funcs:\n",
     "                    try:\n",
     "                        validation_accuracy, test_accuracy =apply_DTree(train = train_fold,\n",
@@ -269,7 +269,15 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed with: impurity_func: gini, max_depth: 8, min_instances: 11, target_impurity: 0.6000000000000001\n"
+     ]
+    }
+   ],
    "source": [
     "records =para_tuning()\n",
     "records"
