--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part B\n"
+    "# Part A\n"
    ]
   },
   {
@@ -113,6 +113,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part B"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -122,7 +130,7 @@
      "output_type": "stream",
      "text": [
       "Training with: impurity_func: entropy, max_depth: 5, min_instances: 2, target_impurity: 0\n",
-      "Result: Validation accuray: 0.755 || Test accuray: 0.739 \n",
+      "Result: Validation accuray: 0.715 || Test accuray: 0.697 \n",
       "\n"
      ]
     }
@@ -139,7 +147,7 @@
     "            test = test,\n",
     "            impurity_func = 'entropy',\n",
     "            discrete_threshold = 10,\n",
-    "            max_depth = 8,\n",
+    "            max_depth = 5,\n",
     "            min_instances = 2,\n",
     "            target_impurity = 0)\n",
     "print('Result: Validation accuray: {} || Test accuray: {} \\n'.format(validation_accuracy,test_accuracy))\n"
@@ -155,74 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>impurity_func</th>\n",
-       "      <th>max_depth</th>\n",
-       "      <th>min_instances</th>\n",
-       "      <th>target_impurity</th>\n",
-       "      <th>validation_accuracy</th>\n",
-       "      <th>test_accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.755</td>\n",
-       "      <td>0.739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.755</td>\n",
-       "      <td>0.739</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  impurity_func max_depth min_instances target_impurity  validation_accuracy  \\\n",
-       "0             1         1             1               1                0.755   \n",
-       "1             1         2             1               1                0.755   \n",
-       "\n",
-       "   test_accuracy  \n",
-       "0          0.739  \n",
-       "1          0.739  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
     }
    ],
    "source": [
@@ -231,23 +180,24 @@
     "# row2 = {'impurity_func': 1, 'max_depth': 2, 'min_instances': 1, 'target_impurity': 1,'validation_accuracy': validation_accuracy,'test_accuracy': test_accuracy}\n",
     "# records = pd.concat([records,pd.DataFrame(row,index=[0])])\n",
     "# records = pd.concat([records,pd.DataFrame(row2,index=[len(records)])])\n",
-    "# records"
+    "# records\n",
+    "print(np.arange(0,1,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_fold, valid_fold = n_folds(10,train)\n",
     "# impurity_funcs = [ml_utils.metric.entropy,ml_utils.metric.gini]\n",
-    "impurity_funcs = ['entorpy','gini']\n",
+    "impurity_funcs = ['entorpy']\n",
     "def para_tuning():\n",
     "    records = pd.DataFrame(columns= ['impurity_func', 'max_depth', 'min_instances', 'target_impurity','validation_accuracy','test_accuracy'])\n",
-    "    for max_depth in range(7,10):\n",
-    "        for min_instances in range(2,5):\n",
-    "            for target_impurity in np.arange(0,1,0.3):\n",
+    "    for max_depth in range(10,25):\n",
+    "        for min_instances in range(4,10):\n",
+    "            for target_impurity in np.arange(0,1,1):\n",
     "                for impurity_func in impurity_funcs:\n",
     "                    try:\n",
     "                        validation_accuracy, test_accuracy =apply_DTree(train = train_fold,\n",
@@ -267,20 +217,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records =para_tuning()\n",
+    "records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed with: impurity_func: gini, max_depth: 8, min_instances: 11, target_impurity: 0.6000000000000001\n"
+      "impurity_func          entorpy\n",
+      "max_depth                   11\n",
+      "min_instances                4\n",
+      "target_impurity            0.0\n",
+      "validation_accuracy       0.73\n",
+      "test_accuracy              N/A\n",
+      "Name: 0, dtype: object\n"
      ]
     }
    ],
    "source": [
-    "records =para_tuning()\n",
-    "records"
+    "best=records.loc[records['validation_accuracy'].idxmax()]\n",
+    "print(best)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training with: impurity_func: entropy, max_depth: 5, min_instances: 2, target_impurity: 0\n",
+      "Result: Validation accuray: 0.73 || Test accuray: 0.747 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Training with: impurity_func: {}, max_depth: {}, min_instances: {}, target_impurity: {}'\n",
+    "          .format( 'entropy',5,2,0))\n",
+    "validation_accuracy, test_accuracy = apply_DTree(train = train_fold,\n",
+    "            validation = valid_fold,\n",
+    "            test = test,\n",
+    "            impurity_func = 'entropy',\n",
+    "            discrete_threshold = 10,\n",
+    "            max_depth = 11,\n",
+    "            min_instances = 4,\n",
+    "            target_impurity = 0)\n",
+    "print('Result: Validation accuray: {} || Test accuray: {} \\n'.format(validation_accuracy,test_accuracy))"
    ]
   }
  ],
