--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -102,9 +102,9 @@
     "    tree.train(train,'track_genre')\n",
     "    validation_accuracy = 'N/A'\n",
     "    test_accuracy = 'N/A'\n",
-    "    if(validation is not None):\n",
+    "    if validation is not None:\n",
     "        validation_accuracy = calc_accuracy(*predict_data(validation,tree))\n",
-    "    if(test is not None):\n",
+    "    if test is not None:\n",
     "        test_accuracy = calc_accuracy(*predict_data(test,tree))\n",
     "\n",
     "    return validation_accuracy, test_accuracy\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
      "output_type": "stream",
      "text": [
       "Training with: impurity_func: entropy, max_depth: 5, min_instances: 2, target_impurity: 0\n",
-      "Result: Validation accuray: 0.715 || Test accuray: 0.697 \n",
+      "Result: Validation accuray: 0.735 || Test accuray: 0.751 \n",
       "\n"
      ]
     }
@@ -147,8 +147,8 @@
     "            test = test,\n",
     "            impurity_func = 'entropy',\n",
     "            discrete_threshold = 10,\n",
-    "            max_depth = 5,\n",
-    "            min_instances = 2,\n",
+    "            max_depth = 10,\n",
+    "            min_instances = 3,\n",
     "            target_impurity = 0)\n",
     "print('Result: Validation accuray: {} || Test accuray: {} \\n'.format(validation_accuracy,test_accuracy))\n"
    ]
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,9 +195,9 @@
     "impurity_funcs = ['entorpy']\n",
     "def para_tuning():\n",
     "    records = pd.DataFrame(columns= ['impurity_func', 'max_depth', 'min_instances', 'target_impurity','validation_accuracy','test_accuracy'])\n",
-    "    for max_depth in range(10,25):\n",
-    "        for min_instances in range(4,10):\n",
-    "            for target_impurity in np.arange(0,1,1):\n",
+    "    for max_depth in range(2,26,2):\n",
+    "        for min_instances in range(3,4):\n",
+    "            for target_impurity in np.arange(0,1,0.6):\n",
     "                for impurity_func in impurity_funcs:\n",
     "                    try:\n",
     "                        validation_accuracy, test_accuracy =apply_DTree(train = train_fold,\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records2 = para_tuning()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,10 +244,10 @@
      "output_type": "stream",
      "text": [
       "impurity_func          entorpy\n",
-      "max_depth                   11\n",
+      "max_depth                   10\n",
       "min_instances                4\n",
-      "target_impurity            0.0\n",
-      "validation_accuracy       0.73\n",
+      "target_impurity              0\n",
+      "validation_accuracy      0.735\n",
       "test_accuracy              N/A\n",
       "Name: 0, dtype: object\n"
      ]
@@ -251,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
