--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "                target_impurity: float = 0.0\n",
     "                ):\n",
     "    \n",
-    "    impurity_func = ml_utils.metric.entropy if str == 'entropy'   else  ml_utils.metric.gini\n",
+    "    impurity_func = ml_utils.metric.entropy if impurity_func == 'entropy'   else  ml_utils.metric.gini\n",
     "    tree = ml_utils.experimental.DecisionTree(discrete_threshold=discrete_threshold,\n",
     "                                            max_depth=max_depth,\n",
     "                                            min_instances=min_instances,\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
      "output_type": "stream",
      "text": [
       "Training with: impurity_func: entropy, max_depth: 5, min_instances: 2, target_impurity: 0\n",
-      "Result: Validation accuray: 0.735 || Test accuray: 0.751 \n",
+      "Result: Validation accuray: 0.73 || Test accuray: 0.751 \n",
       "\n"
      ]
     }
@@ -219,7 +219,316 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>impurity_func</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>min_instances</th>\n",
+       "      <th>target_impurity</th>\n",
+       "      <th>validation_accuracy</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.605</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.680</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.775</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.755</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.735</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.730</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.715</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.720</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.720</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.720</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>22</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.720</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>22</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>24</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.720</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>24</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   impurity_func max_depth min_instances  target_impurity  \\\n",
+       "0        entorpy         2             3              0.0   \n",
+       "1        entorpy         2             3              0.6   \n",
+       "2        entorpy         4             3              0.0   \n",
+       "3        entorpy         4             3              0.6   \n",
+       "4        entorpy         6             3              0.0   \n",
+       "5        entorpy         6             3              0.6   \n",
+       "6        entorpy         8             3              0.0   \n",
+       "7        entorpy         8             3              0.6   \n",
+       "8        entorpy        10             3              0.0   \n",
+       "9        entorpy        10             3              0.6   \n",
+       "10       entorpy        12             3              0.0   \n",
+       "11       entorpy        12             3              0.6   \n",
+       "12       entorpy        14             3              0.0   \n",
+       "13       entorpy        14             3              0.6   \n",
+       "14       entorpy        16             3              0.0   \n",
+       "15       entorpy        16             3              0.6   \n",
+       "16       entorpy        18             3              0.0   \n",
+       "17       entorpy        18             3              0.6   \n",
+       "18       entorpy        20             3              0.0   \n",
+       "19       entorpy        20             3              0.6   \n",
+       "20       entorpy        22             3              0.0   \n",
+       "21       entorpy        22             3              0.6   \n",
+       "22       entorpy        24             3              0.0   \n",
+       "23       entorpy        24             3              0.6   \n",
+       "\n",
+       "    validation_accuracy test_accuracy  \n",
+       "0                 0.605           N/A  \n",
+       "1                 0.510           N/A  \n",
+       "2                 0.680           N/A  \n",
+       "3                 0.510           N/A  \n",
+       "4                 0.775           N/A  \n",
+       "5                 0.510           N/A  \n",
+       "6                 0.755           N/A  \n",
+       "7                 0.510           N/A  \n",
+       "8                 0.735           N/A  \n",
+       "9                 0.510           N/A  \n",
+       "10                0.730           N/A  \n",
+       "11                0.510           N/A  \n",
+       "12                0.715           N/A  \n",
+       "13                0.510           N/A  \n",
+       "14                0.720           N/A  \n",
+       "15                0.510           N/A  \n",
+       "16                0.720           N/A  \n",
+       "17                0.510           N/A  \n",
+       "18                0.720           N/A  \n",
+       "19                0.510           N/A  \n",
+       "20                0.720           N/A  \n",
+       "21                0.510           N/A  \n",
+       "22                0.720           N/A  \n",
+       "23                0.510           N/A  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "records =para_tuning()\n",
     "records"
